forum-app/packages/rest-client/src/index.scss
body,
p {
  margin: 0;
  white-space: pre-wrap;
}

@for $i from 1 through 6 {
  h#{$i} {
    margin: 0;
  }
}

ul {
  list-style: none;
}

button,
a {
  cursor: pointer;
  outline: none;
}

a {
  text-decoration: none;
  color: inherit;
}

